# can2ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: signals.yaml
include/can/: CANInterface.h  Signal.h
launch/: can_interface.launch
msg/: CANFrame.msg
scripts/: cansendperiodic.sh
src/: CANInterface.cpp  Signal.cpp  can_gateway_node.cpp  can_interface_in_node.cpp  can_interface_out_node.cpp
