<?xml version="1.0"?>
<package>
  <name>can</name>
  <version>1.0.0</version>
  <description>
    CAN Gateway for ROS.
  </description>

  <maintainer email="denise.ratasich@tuwien.ac.at">Denise Ratasich</maintainer>
  <license>MIT</license>
  <author email="denise.ratasich@tuwien.ac.at">Denise Ratasich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
